--- a/Chapitre 10 - Session utilisateurs et insertions SQL.ipynb
+++ b/Chapitre 10 - Session utilisateurs et insertions SQL.ipynb
@@ -50,71 +50,18 @@
     "Pour enregister un mot de passe, on va *a minima* encrypter ce mot de passe. On utilise d'ailleurs à mauvais escient ce terme car ce que l'on va calculer réellement est un hash. Contrairement à l'encryptage, le hash n'est pas reversible. Si quelque chose est hashé en \"qqewretet\", la seule manière de trouver l'original est de \"brute-forcer\" ce dernier, c'est à dire de générer tous les mots de passe possibles (ce qui est, disons le, plutôt difficile).\n",
     "\n",
     "L'autre manière de casser un Hash, c'est d'avoir la malchance d'avoir l'algorithme de hashage de cassé. On en trouve trois actuellement recommandés (*cf.* *[\n",
-    "About Secure Password Hashing](http://security.blogoverflow.com/2013/09/about-secure-password-hashing/)*) :\n",
-    "- PBKDF2\n",
-    "- bcrypt\n",
-    "- scrypt\n",
+    "About Secure Password Hashing](http://security.blogoverflow.com/2013/09/about-secure-password-hashing/)*).\n",
     "\n",
-    "Une personne a déjà produit [un plugin](https://bitbucket.org/mhallin/py-scrypt/src) pour utiliser `scrypt`. Installons le :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scrypt in ./env/lib/python3.5/site-packages\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Afin d'éviter un aller-retour dans l'environnement virtuel :\n",
-    "!pip install scrypt"
+    "Pour Flask, Werkzeug (un outil qui permet à Flask de fonctionner) fournit deux fonctions : `generate_password_hash` et `check_password_hash`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le plugin `scrypt` possède une fonction simple `encrypt(sel, motdepasse, maxtime=0.1)` où maxtime est un décimal représentant le temps d'encryptage maximum :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b\"\\xe1\\x08\\xfd\\xdeO\\xae\\xd4s_\\xf1\\x08\\xa0\\x1fq\\xb1C\\xcaK<\\xfbB\\xd2\\x08\\xd2:\\xa8\\xb4\\xf1q\\xa1\\xe9\\x96,.\\xdbg&\\xfd\\xa9\\xaa\\xee\\xe1'.q\\xc97\\xf4\\x02A\\xf0\\x9fr\\xfd+{h\\x86\\xa3[*o\\x85\\xe1\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "import scrypt\n",
-    "print(scrypt.hash(\"motdepasse\", \"un petit sel en passant par là\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Nous avons ici une chaîne en `bytes` : elle repose sur un encodage différent de l'encodage UTF-8 de `str()`. Pour des raisons propres à l'utf-8, il est fort probable que le côté aléatoire de `scrypt` rende le hash de mot de passe intraduisible en UTF-8."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Constante de \"SEL\" (*salt*)\n",
+    "#### Constante de sécurité\n",
     "\n",
-    "Pour notre application, nous allons intégrer un nouveau module pour stocker nos constantes. Cela permettra de gérer les configurations générales plus proprement : créons donc `gazetteer/constantes.py` où nous stockons ce sel."
+    "Pour notre application, nous allons intégrer un nouveau module pour stocker nos constantes. Cela permettra de gérer les configurations générales plus proprement : créons donc `gazetteer/constantes.py` où nous stockons un \"secret\" qui permettra à Flask d'effectuer des transactions sécurisées :"
    ]
   },
   {
@@ -166,8 +113,8 @@
     "    :returns: Si réussite, données de l'utilisateur. Sinon None\n",
     "    :rtype: User or None\n",
     "    \"\"\"\n",
-    "    utilisateur = User.query.filter(User.user_login == login)\n",
-    "    if motdepasse == scrypt.hash(motdepasse, SEL):\n",
+    "    utilisateur = User.query.filter(User.user_login == login).first()\n",
+    "    if utilisateur and check_password_hash(utilisateur.user_password, motdepasse):\n",
     "        return utilisateur\n",
     "    return None\n",
     "```\n",
@@ -191,8 +138,8 @@
     "        :returns: Si réussite, données de l'utilisateur. Sinon None\n",
     "        :rtype: User or None\n",
     "        \"\"\"\n",
-    "        utilisateur = User.query.filter(User.user_login == login)\n",
-    "        if motdepasse == scrypt.hash(motdepasse, SEL):\n",
+    "        utilisateur = User.query.filter(User.user_login == login).first()\n",
+    "        if utilisateur and check_password_hash(utilisateur.user_password, motdepasse):\n",
     "            return utilisateur\n",
     "        return None\n",
     "```\n",
@@ -255,7 +202,7 @@
     "            user_nom=nom,\n",
     "            user_login=login,\n",
     "            user_email=email,\n",
-    "            user_password=scrypt.hash(motdepasse, SEL)\n",
+    "            user_password=generate_password_hash(motdepasse)\n",
     "        )\n",
     "\n",
     "        try:\n",
@@ -268,13 +215,306 @@
     "            return True, utilisateur\n",
     "        except Exception as erreur:\n",
     "            return False, [str(erreur)]\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formulaire d'inscription\n",
     "\n",
     "On ajoute ensuite la route pour s'inscrire (ainsi qu'un lien dans le menu !) :\n",
     "\n",
     "```python\n",
+    "from flask import flash, redirect, request\n",
     "\n",
-    "```\n"
+    "\n",
+    "@app.route(\"/register\", methods=[\"GET\", \"POST\"])\n",
+    "def inscription():\n",
+    "    \"\"\" Route gérant les inscriptions\n",
+    "    \"\"\"\n",
+    "    # Si on est en POST, cela veut dire que le formulaire a été envoyé\n",
+    "    if request.method == \"POST\":\n",
+    "        statut, donnees = User.creer(\n",
+    "            login=request.form.get(\"login\", None),\n",
+    "            email=request.form.get(\"email\", None),\n",
+    "            nom=request.form.get(\"nom\", None),\n",
+    "            motdepasse=request.form.get(\"motdepasse\", None)\n",
+    "        )\n",
+    "        if statut is True:\n",
+    "            flash(\"Enregistrement effectué. Identifiez-vous maintenant\", \"success\")\n",
+    "            return redirect(\"/\")\n",
+    "        else:\n",
+    "            flash(\"Les erreurs suivantes ont été rencontrées : \" + \",\".join(donnees), \"error\")\n",
+    "            return render_template(\"pages/inscription.html\")\n",
+    "    else:\n",
+    "        return render_template(\"pages/inscription.html\")\n",
+    "```\n",
+    "\n",
+    "#### On remarque: \n",
+    "\n",
+    "- Dans @app.route, on a ajouté `methods=[\"GET\", \"POST\"]` : cela signifie que la page est disponible à la fois pour GET et POST\n",
+    "- On peut vérifier la méthode utilisée en vérifiant la valeur de `request.method`\n",
+    "- On peut utiliser la fonction `flask.flash` pour afficher des messages d'erreurs (Regardez le `container.html` qui a été modifié pour afficher celles-ci). Les erreurs peuvent être accompagnées de catégorie.\n",
+    "- On peut rediriger vers une url précise via `flask.redirect`\n",
+    "- On a préféré séparer la logique de la connexion (dans modeles/utilisateur.py) plutôt que dans les routes. La route `inscription` ne sert qu'à appeler les différentes fonctions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Se connecter\n",
+    "\n",
+    "Pour gérer les utilisateurs, Flask possède un plugin `flask-login` que nous allons installer :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting flask-login\n",
+      "  Downloading Flask-Login-0.4.1.tar.gz\n",
+      "Requirement already satisfied: Flask in ./env/lib/python3.5/site-packages (from flask-login)\n",
+      "Requirement already satisfied: Werkzeug>=0.7 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
+      "Requirement already satisfied: click>=2.0 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
+      "Requirement already satisfied: Jinja2>=2.4 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
+      "Requirement already satisfied: itsdangerous>=0.21 in ./env/lib/python3.5/site-packages (from Flask->flask-login)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in ./env/lib/python3.5/site-packages (from Jinja2>=2.4->Flask->flask-login)\n",
+      "Building wheels for collected packages: flask-login\n",
+      "  Running setup.py bdist_wheel for flask-login ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/thibault/.cache/pip/wheels/25/4b/53/738919150a881bdebf1e2a7885fa7610a1ff7ff3e113a55fe1\n",
+      "Successfully built flask-login\n",
+      "Installing collected packages: flask-login\n",
+      "Successfully installed flask-login-0.4.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install flask-login"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Configuration\n",
+    "\n",
+    "Flask-Login s'installe de la même manière que Flask SQLAlchemy :\n",
+    "\n",
+    "```python\n",
+    "from flask_login import LoginManager\n",
+    "app = Flask(...)\n",
+    "# ...\n",
+    "login = LoginManager(app)\n",
+    "```\n",
+    "\n",
+    "On ajoute donc ces lignes à notre `app.py`.\n",
+    "\n",
+    "Une fois cela fait, on va configurer notre objet SQLAlchemy User pour qu'il puisse être compris par Flask Login, il va falloir rajouter quatre fonctions :\n",
+    "- `is_authenticated` : une propriété, elle retournera True si l'utilisateur-rice est connecté-e, False sinon\n",
+    "- `is_active` : une propriété, elle retournera True si l'utilisateur-rice est actif-ve, False sinon. \n",
+    "    - Le caractère actif des membres de notre site n'est pas utilisé, pourtant, il faudra remplir cette case. On renverra donc True\n",
+    "- `is_anonymous` : une propriété qui retournera False pour les utilisateur-rices non-anonymes.\n",
+    "- `get_id(identifier)` : une fonction qui retournera l'utilisateur pour l'ID donné\n",
+    "\n",
+    "**Mais** les choses sont bien faites, Flask Login propose un outil pour ne pas avoir à coder cela soit même : `flask_login.UserMixin` :\n",
+    "\n",
+    "```python\n",
+    "from werkzeug.security import generate_password_hash, check_password_hash\n",
+    "from flask_login import UserMixin\n",
+    "\n",
+    "from .. app import db\n",
+    "\n",
+    "class User(UserMixin, db.Model):\n",
+    "    # ...\n",
+    "```\n",
+    "\n",
+    "**Explications** : en ajoutant `UserMixin` à `db.Model`, on donne à python l'information que User est à la fois un `UserMixin` et un `db.Model`\n",
+    "\n",
+    "**Malheureusement**, le `get_id` par défaut de UserMixin n'est pas complètement compatible avec notre `User`, car il a besoin d'une propriété `.id` pour que `get_id()` fonctionne. On va donc écrire par-dessus:\n",
+    "\n",
+    "```python\n",
+    "class User(UserMixin, db.Model):\n",
+    "    # ...\n",
+    "    def get_id(self):\n",
+    "        \"\"\" Retourne l'id de l'objet actuellement utilisé \n",
+    "        \n",
+    "        :returns: ID de l'utilisateur\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        return self.user_id\n",
+    "```\n",
+    "\n",
+    "Ici, `self` prend la valeur de l'utilisateur courant. Par exemple :\n",
+    "\n",
+    "```python\n",
+    "Laurel = User(user_id=1)\n",
+    "Hardy = User(user_id=2)\n",
+    "\n",
+    "print(Laurel.get_id())\n",
+    ">>> 1\n",
+    "print(Hardy.get_id())\n",
+    ">>> 2\n",
+    "```\n",
+    "\n",
+    "Il va quand même falloir définir nous même une fonction qui permettra de récupérer un utilisateur en fonction de son identifiant (toujours dans `utilisateur.py`) :\n",
+    "\n",
+    "```python\n",
+    "from app import login\n",
+    "\n",
+    "# ...\n",
+    "@login.user_loader\n",
+    "def trouver_utilisateur_via_id(id):\n",
+    "    return User.query.get(int(id))\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formulaire de connexion\n",
+    "\n",
+    "On ajoutera donc un nouveau formulaire à notre application ainsi qu'un nouveau menu dans le container principal :\n",
+    "\n",
+    "```html\n",
+    "{% extends \"conteneur.html\" %}\n",
+    "\n",
+    "{% block titre %}| Connexion{%endblock%}\n",
+    "\n",
+    "{% block corps %}\n",
+    "\n",
+    "<h1>Inscription</h1>\n",
+    "<form class=\"form\" method=\"POST\" action=\"{{url_for(\"connexion\")}}\">\n",
+    "  <div class=\"form-group row\">\n",
+    "    <label for=\"register-login\" class=\"col-sm-2 col-form-label\">Login</label>\n",
+    "    <div class=\"col-sm-10\">\n",
+    "      <input type=\"text\" class=\"form-control\" id=\"register-login\" name=\"login\" placeholder=\"Nom d'utilisateur pour se connecter\">\n",
+    "    </div>\n",
+    "  </div>\n",
+    "  <div class=\"form-group row\">\n",
+    "    <label for=\"register-password\" class=\"col-sm-2 col-form-label\">Password</label>\n",
+    "    <div class=\"col-sm-10\">\n",
+    "      <input type=\"password\" class=\"form-control\" id=\"register-password\" placeholder=\"Mot de passe\" name=\"motdepasse\">\n",
+    "    </div>\n",
+    "  </div>\n",
+    "  <div>\n",
+    "    <button type=\"submit\" class=\"btn btn-primary\">Connexion</button>\n",
+    "    <a href=\"{{url_for(\"inscription\")}}\" class=\"btn btn-secondary\">Inscription</a>\n",
+    "  </div>\n",
+    "</form>\n",
+    "{% endblock %}\n",
+    "```\n",
+    "\n",
+    "et la route qui correspondra \n",
+    "\n",
+    "```python\n",
+    "from flask_login import login_user, current_user\n",
+    "from .app import login\n",
+    "\n",
+    "\n",
+    "@app.route(\"/connexion\", methods=[\"POST\", \"GET\"])\n",
+    "def connexion():\n",
+    "    \"\"\" Route gérant les connexions\n",
+    "    \"\"\"\n",
+    "    if current_user.is_authenticated is True:\n",
+    "        flash(\"Vous êtes déjà connecté-e\", \"info\")\n",
+    "        return redirect(\"/\")\n",
+    "    # Si on est en POST, cela veut dire que le formulaire a été envoyé\n",
+    "    if request.method == \"POST\":\n",
+    "        utilisateur = User.identification(\n",
+    "            login=request.form.get(\"login\", None),\n",
+    "            motdepasse=request.form.get(\"motdepasse\", None)\n",
+    "        )\n",
+    "        if utilisateur:\n",
+    "            flash(\"Connexion effectuée\", \"success\")\n",
+    "            login_user(utilisateur)\n",
+    "            return redirect(\"/\")\n",
+    "        else:\n",
+    "            flash(\"Les identifiants n'ont pas été reconnus\", \"error\")\n",
+    "\n",
+    "    return render_template(\"pages/connexion.html\")\n",
+    "        \n",
+    "login.login_view = 'connexion'\n",
+    "```\n",
+    "\n",
+    "##### On remarquera\n",
+    "- Pour obtenir l'utilisateur courant, on appelle `flask_login.current_user`\n",
+    "- Pour valider l'authentification, on passer à la fonction `flask_login.login_user` la variable comportant l'utilisateur\n",
+    "- On marque la route définie comme celle de connexion\n",
+    "\n",
+    "### Deconnexion\n",
+    "\n",
+    "La route de déconnexion est aussi assez simple : on va juste utiliser la fonction `flask_login.logout_user` :\n",
+    "\n",
+    "```python\n",
+    "from flask_login import logout_user, current_user\n",
+    "\n",
+    "@app.route(\"/deconnexion\", methods=[\"POST\", \"GET\"])\n",
+    "def deconnexion():\n",
+    "    if current_user.is_authenticated is True:\n",
+    "        logout_user()\n",
+    "    flash(\"Vous êtes déconnecté-e\", \"info\")\n",
+    "    return redirect(\"/\")\n",
+    "```\n",
+    "\n",
+    "### Afficher l'utilisateur courant dans les templates\n",
+    "\n",
+    "Pour afficher l'utilisateur courant dans les templates, on utilise de même la variable `{{ current_user }}`: \n",
+    "\n",
+    "```html\n",
+    "<ul class=\"navbar-nav mr-auto\">\n",
+    "    {% if not current_user.is_authenticated %}\n",
+    "      <li class=\"nav-item\">\n",
+    "        <a class=\"nav-link\" href=\"{{url_for(\"inscription\")}}\">Inscription</a>\n",
+    "      </li>\n",
+    "      <li class=\"nav-item\">\n",
+    "        <a class=\"nav-link\" href=\"{{url_for(\"connexion\")}}\">Connexion</a>\n",
+    "      </li>\n",
+    "    {% else %}\n",
+    "      <li class=\"nav-item\">\n",
+    "        <a class=\"nav-link\" href=\"{{url_for(\"deconnexion\")}}\">Déconnexion ({{current_user.user_nom}})</a>\n",
+    "      </li>\n",
+    "    {% endif %}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exemple 16\n",
+    "\n",
+    "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
+    "\n",
+    "```sh\n",
+    "cd cours-flask/exemple16\n",
+    "python run.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercice\n",
+    "\n",
+    "Ecrire une page pour créer un nouveau lieu seulement quand on est connecté. Pour limiter la capacité à accéder à une page, on précède la route de `flask_login.login_required` :\n",
+    "\n",
+    "```python\n",
+    "from flask_login import login_required\n",
+    "\n",
+    "@login_required\n",
+    "def route()\n",
+    "```"
    ]
   }
  ],
