--- a/Chapitre 11 - Jointures SQL et Update.ipynb
+++ b/Chapitre 11 - Jointures SQL et Update.ipynb
@@ -29,18 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thibault/dev/cours-python/env/lib/python3.5/site-packages/flask_sqlalchemy/__init__.py:794: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.\n",
-      "  'SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# On remet en place la configuration Flask / MySQL\n",
     "\n",
@@ -49,12 +40,13 @@
     "\n",
     "app = Flask(\"Nom\")\n",
     "app.config['SQLALCHEMY_DATABASE_URI'] = 'mysql://gazetteer_user:password@localhost/gazetteer'\n",
+    "app.config[\"SQLALCHEMY_TRACK_MODIFICATIONS\"] = False\n",
     "db = SQLAlchemy(app)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +69,7 @@
     "    user_login = db.Column(db.String(45), nullable=False, unique=True)\n",
     "    user_email = db.Column(db.Text, nullable=False)\n",
     "    user_password = db.Column(db.String(100), nullable=False)\n",
+    "    # Seul changement pour user\n",
     "    authorships = db.relationship(\"Authorship\", back_populates=\"user\")\n",
     "    \n",
     "class Place(db.Model):\n",
@@ -96,6 +89,17 @@
    "source": [
     "### Lecture du code\n",
     "\n",
+    "#### Construction \"normale\" du modèle\n",
+    "\n",
+    "```python\n",
+    "class Authorship(db.Model):\n",
+    "    __tablename__ = \"authorship\"\n",
+    "    authorship_id = db.Column(db.Integer, nullable=True, autoincrement=True, primary_key=True)\n",
+    "    authorship_place_id = db.Column(db.Integer, db.ForeignKey('place.place_id'))\n",
+    "    authorship_user_id = db.Column(db.Integer, db.ForeignKey('user.user_id'))\n",
+    "    authorship_date = db.Column(db.DateTime, default=datetime.datetime.utcnow)\n",
+    "```\n",
+    "\n",
     "- On crée un `db.Model` `Authorship`\n",
     "    - On en profite pour introduire `__tablename__` qui permet de spécifier un nom de table pour SQLAlchemy. Par défaut, SQLAlchemy utilise la version minuscule de la classe.\n",
     "- On rajoute un champ `authorship_id` qui n'est pas très novateur\n",
@@ -103,38 +107,151 @@
     "    - comme défaut, on utilise la fonction `datetime.utcnow`. Elle sera executée à chaque insertion\n",
     "- On rajoute un champ `authorship_place_id`\n",
     "    - Ce champ comporte une option `ForeignKey` qui lie au champ `place.place_id` qui permettra de les liens ensemble\n",
-    "        - On utilise les guillemets ici qui correspondentà la syntaxe MySQL et non à la syntaxe python (`nomdetable.champ`)\n",
-    "- On rajoute un champ `authorship_user_id` construit en mirroir du champ précédent"
+    "    - On utilise les guillemets pour la `ForeignKey` qui correspondentà la syntaxe MySQL et non à la syntaxe python (`nomdetable.champ`)\n",
+    "- On rajoute un champ `authorship_user_id` construit en mirroir du champ précédent\n",
+    "\n",
+    "##### Ce que l'on a appris en plus :\n",
+    "\n",
+    "- `default` peut prendre une fonction. Pour que la fonction soit exécutée à l'enregistrement, on fournit simplement le nom de la fonction.\n",
+    "- `ForeignKey` permet de lier un champ à un autre champ d'une autre table\n",
+    "- On peut utiliser `__tablename__` pour imposer un nom de table\n",
+    "\n",
+    "#### Construction des relations en python\n",
+    "\n",
+    "On distingue 4 nouveautés, dans les trois classes, introduites via `db.relationship()`.\n",
+    "\n",
+    "```python\n",
+    "class Authorship(db.Model):\n",
+    "    # ...\n",
+    "    user = db.relationship(\"User\", back_populates=\"authorships\")\n",
+    "    place = db.relationship(\"Place\", back_populates=\"authorships\")\n",
+    "\n",
+    "class User(db.Model):\n",
+    "    # ...\n",
+    "    authorships = db.relationship(\"Authorship\", back_populates=\"user\")\n",
+    "    \n",
+    "class Place(db.Model):\n",
+    "    # ...\n",
+    "    authorships = db.relationship(\"Authorship\", back_populates=\"place\")\n",
+    "```\n",
+    "\n",
+    "**Réflexion:** Avant de lire les exemples, avez-vous une idée de leur effet ?\n",
+    "\n",
+    "##### Exemple"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Administrator\n",
-      "Administrator\n",
-      "Administrator\n",
-      "Administrator\n",
-      "Administrator\n",
-      "Administrator\n",
-      "Administrator\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Résultat :\n",
-    "x = Place.query.get(2)\n",
-    "a_ecrit = Authorship(user=User.query.get(1), place=x)\n",
+    "# Exécuter une seule fois si possible\n",
+    "\n",
+    "# On récupère un lieu\n",
+    "place_2 = Place.query.get(2)\n",
+    "# On récupère un utilisateur\n",
+    "user_1 = User.query.get(1)\n",
+    "# On crée un lien d'autorité\n",
+    "a_ecrit = Authorship(user=user_1, place=place_2)\n",
+    "# On enregistre\n",
     "db.session.add(a_ecrit)\n",
+    "db.session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for authorship in Place.query.get(2).authorships:\n",
+    "    print(\"{auteur} a écrit à {moment}\".format(\n",
+    "        auteur=authorship.user.user_nom,\n",
+    "        moment=authorship.authorship_date\n",
+    "    ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  `db.relationship`\n",
+    "`db.relationship()` permet de construire des relations directes entre les objets et de naviguer entre eux. Ainsi, dans l'insertion, on n'utilise pas `place_id` ou `user_id` mais bien `place` et `user`. \n",
+    "\n",
+    "La fonction `db.relationship` est tout à fait différente de `db.Column()` en ce qu'elle n'intervient pas sur la structure MySQL de vos classes mais permet simplement de connecter vos différentes classes. Elle est construite sur deux paramètres:\n",
+    "- le premier paramètre correspond au nom de la classe Python qui est liée à la propriété\n",
+    "- le second paramètre (`back_populates`), qui est optionnel, correspond à la propriété dans la classe cible qui contient la même information en miroir. Ainsi `Authorship.user` lie vers `User` tandis que `User.authorships` lie vers `Authorship`.\n",
+    "\n",
+    "En résumé, on a en syntaxe :\n",
+    "\n",
+    "```python\n",
+    "class A(db.Model):\n",
+    "    propriete_de_relation = db.relationship(\n",
+    "        \"NomDeLaClasseLiée\",\n",
+    "        back_populates=\"a\"\n",
+    "    )\n",
+    "class NomDeLaClasseLiée(db.Model):\n",
+    "    a = db.relationship(\n",
+    "        \"A\",\n",
+    "        back_populates=\"propriete_de_relation\"\n",
+    "    )\n",
+    "```\n",
+    "\n",
+    "### Exercice\n",
+    "\n",
+    "L'exercice se fait dans un notebook externe : [lien vers l'exercice](./Chapitre 11 - Jointures SQL et Update - Exercice Jointure.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update, vous avez dit Update ?\n",
+    "\n",
+    "En MySql et en gestion de données, on parle généralement de CRUD : Create-Read-Update-Delete. Nous avons vu les deux premiers, le quatrième s'écrite simplement `Place.query.get(1).delete()` ce qui n'est pas très compliqué... Alors, comment corriger un enregistrement ?\n",
+    "\n",
+    "La modification d'une ligne SQL se fait assez simplement :\n",
+    "1. On récupère l'objet\n",
+    "2. On modifie les propriétés que l'on souhaite modifier\n",
+    "3. On ajoute l'objet dans à la session de changement\n",
+    "4. On commit\n",
+    "\n",
+    "Soit :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 1.\n",
+    "place = Place.query.filter(Place.place_nom.like(\"%settlement%\")).first()\n",
+    "print(place.place_nom)\n",
+    "# 2.\n",
+    "place.place_nom = \"Lipara\"\n",
+    "# 3. \n",
+    "db.session.add(place)\n",
+    "# 4.\n",
     "db.session.commit()\n",
     "\n",
-    "for authorship in Place.query.get(2).authorships:\n",
-    "    print(authorship.user.user_nom)\n"
+    "# Résultats:\n",
+    "\n",
+    "print(Place.query.filter(Place.place_nom.like(\"%settlement%\")).count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercide\n",
+    "\n",
+    "Ajouter un formulaire d'édition de lieu pour le projet Boatlas. \n",
+    "\n",
+    "1. On ne pourra pas changer l'id\n",
+    "2. La mise à jour rajoutera un lien d'autorité vers l'éditeur"
    ]
   }
  ],
